# ugc

./: .gitignore  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: check.yml
architecture/: asisC4 (4).puml  asisC4.puml
elk_service/: .env.elk  docker-compose.yml
elk_service/deploy/: logstash.conf
elk_service/temp/: docker-compose-elk.yml
research/: README.md  docker-compose.yml  mongo_data_generator.py  postgre_data_generator.py
ucg_service/: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  dev.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
ucg_service/api/auth/: auth_bearer.py
ucg_service/api/core/: config.py  logger.py
ucg_service/api/grpc_src/protobuf/: permissions.proto
ucg_service/api/grpc_src/service/: helpers.py
ucg_service/api/nginx/: nginx.conf
ucg_service/api/schemas/: bookmark.py  helpers.py  mark.py  review.py
ucg_service/api/services/: endpoint_service.py
ucg_service/api/tests/: conftest.py  test_settings.py
ucg_service/api/v11/: bookmarks.py  marks.py  movies_timestamps.py  reviews.py
ucg_service/db/: mongo.py  mongo_service.py
ucg_service/env/: .env-kafka  .env-zoo  .env.prod  .env.test
ucg_service/etl/: ch.Dockerfile  ch_entrypoint.sh  emulate_stream.py  etl.Dockerfile  etl_entrypoint.sh  etl_service.py
ucg_service/etl/clickhouse/: .env-ch
ucg_service/etl/core/: logger.py  settings.py
ucg_service/grpc_nginx/conf.d/: site.conf
ucg_service/research/: README.md  ch_client.py  docker-compose.yml  ver_client.py
(+13 files in other folders)
